--- a/visual.html
+++ b/visual.html
@@ -1,5 +1,5 @@
 <html>
-<head> HARSHINE VENKATARAMAN 1001569298
+<head> 
 <img src="https://www.w3schools.com/images/picture.jpg"  style="width:300px">
 
 </head>
